<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp">
    <TextView
        android:layout_width="0dp"
        android:layout_weight=".33"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/day_forecast_value"
        android:paddingLeft="15dp"
        android:text="@string/day_value"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_weight=".34"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/weather_icon"
            android:src="@drawable/sun_93"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_below="@+id/description_value"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description_forecast_value"
            android:layout_gravity="center"
            android:text="@string/description_forecast_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:id="@+id/maxtemp_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/degree_label"
            android:layout_below="@+id/description_value"
            android:layout_gravity="right">
            <TextView
                android:id="@+id/maxtemp_label"
                android:text="@string/maxtemp_label"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF9800"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/maxtemp_forecast_value"
                android:text="@string/maxtemp_value"
                android:textSize="15sp"
                android:textColor="#FF9800"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/degree_label1"
                android:text="@string/degree_label"
                android:textSize="15sp"
                android:textColor="#FF9800"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/degree_label"
            android:layout_below="@+id/maxtemp_layout"
            android:layout_gravity="right"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/mintemp_forecast_label"
                android:text="@string/mintemp_label"
                android:textSize="15sp"
                android:textColor="#FF9800"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/mintemp_forecast_value"
                android:text="@string/mintemp_value"
                android:textSize="15sp"
                android:textColor="#FF9800"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/degree_label2"
                android:text="@string/degree_label"
                android:textSize="15sp"
                android:textColor="#FF9800"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>