<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#FFFFFF">
                <TextView
                    android:id="@+id/city_value"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/city_value"
                    android:fontFamily="sans-serif-light"
                    android:background="#FF9800"
                    android:textSize="25sp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF">
                </TextView>
                <TextView
                    android:id="@+id/description_value"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/description_value"
                    android:textSize="20sp"
                    android:paddingLeft="15dp"
                    android:layout_below="@+id/city_value">
                </TextView>
                <ImageView
                    android:id="@+id/weather_icon"
                    android:src="@drawable/sun_93"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_below="@+id/description_value"/>

                <TextView
                    android:id="@+id/temperature_value"
                    android:text="@string/temperature_value"
                    android:textSize="50sp"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/weather_icon"
                    android:layout_below="@+id/description_value"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:id="@+id/degree_label"
                    android:text="@string/degree_label"
                    android:textSize="50sp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/temperature_value"
                    android:layout_below="@+id/description_value"
                    android:layout_marginTop="15dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/degree_label"
            android:layout_below="@+id/description_value"
            android:layout_marginLeft="20dp">
            <LinearLayout
                android:id="@+id/maxtemp_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:layout_marginTop="23dp">
                <TextView
                    android:id="@+id/maxtemp_label"
                    android:text="@string/maxtemp_label"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF9800"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/maxtemp_value"
                    android:text="@string/maxtemp_value"
                    android:textSize="15sp"
                    android:textColor="#FF9800"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/degree_label1"
                    android:text="@string/degree_label"
                    android:textSize="15sp"
                    android:textColor="#FF9800"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/mintemp_label"
                    android:text="@string/mintemp_label"
                    android:textSize="15sp"
                    android:textColor="#FF9800"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:id="@+id/mintemp_value"
                    android:text="@string/mintemp_value"
                    android:textSize="15sp"
                    android:textColor="#FF9800"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/degree_label2"
                    android:text="@string/degree_label"
                    android:textSize="15sp"
                    android:textColor="#FF9800"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/forecast_label"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forecast_listview">
            </ListView>
        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>
